Moving workflow userstore component to user-mgt

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -204,6 +204,7 @@
 
 								<!-- Workflow mgt Feature -->
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.workflow.mgt.feature:${carbon.identity.version}</featureArtifactDef>
+								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.user.mgt.workflow.server.feature:${carbon.identity.version}</featureArtifactDef>
 							</featureArtifacts>
 						</configuration>
 					</execution>
@@ -534,6 +535,10 @@
                                     <id>org.wso2.carbon.dashboards.shindig.feature.group</id>
                                     <version>${carbon.dashboards.version}</version>
                                 </feature>
+								<feature>
+									<id>org.wso2.carbon.user.mgt.workflow.server.feature.group</id>
+									<version>${carbon.identity.version}</version>
+								</feature>
 							</features>
 						</configuration>
 					</execution>
