--- a/pom.xml
+++ b/pom.xml
@@ -1072,7 +1072,7 @@
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
         <testng.version>6.1.1</testng.version>
-        <carbon.deployment.version>4.4.0</carbon.deployment.version>
+        <carbon.deployment.version>4.4.1</carbon.deployment.version>
         <carbon.registry.version>4.4.1</carbon.registry.version>
         <carbon.multitenancy.version>4.4.1</carbon.multitenancy.version>
         <jaggery.extensions.version>1.3.0</jaggery.extensions.version>
@@ -1102,6 +1102,8 @@
         <cipher-tool.version>1.0.0-wso2v3</cipher-tool.version>
         <jacoco.agent.version>0.7.4.201502262128</jacoco.agent.version>
         <project.scm.id>my-scm-server</project.scm.id>
+        <carbon.business-process.version>4.4.2</carbon.business-process.version>
+	<carbon.analytics-common.version>1.0.0</carbon.analytics-common.version>
     </properties>
 
     <repositories>
