--- a/modules/samples/identity-mgt/info-recovery-sample/pom.xml
+++ b/modules/samples/identity-mgt/info-recovery-sample/pom.xml
@@ -98,6 +98,10 @@
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
