--- a/pom.xml
+++ b/pom.xml
@@ -482,7 +482,7 @@
             <dependency>
                 <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.registry.resource.stub</artifactId>
-                <version>${carbon.platform.version}</version>
+                <version>${carbon.registry.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -1078,7 +1078,7 @@
         <selenium.version>2.40.0</selenium.version>
         <testng.version>6.1.1</testng.version>
         <carbon.deployment.version>4.4.1</carbon.deployment.version>
-        <carbon.registry.version>4.4.1</carbon.registry.version>
+        <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.4.1</carbon.multitenancy.version>
         <jaggery.extensions.version>1.3.0</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
