--- a/modules/migration/migration-5.0.0_to_5.1.0/wso2-is-migration-client/pom.xml
+++ b/modules/migration/migration-5.0.0_to_5.1.0/wso2-is-migration-client/pom.xml
@@ -17,6 +17,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
+        <groupId>org.wso2.is</groupId>
+        <artifactId>identity-server-parent</artifactId>
+        <version>5.1.0-SNAPSHOT</version>
+        <relativePath>../../../../pom.xml</relativePath>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.wso2.carbon</groupId>
@@ -24,87 +32,52 @@
     <version>5.1.0</version>
     <packaging>bundle</packaging>
 
-    <repositories>
 
-        <repository>
-            <id>wso2-nexus</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-
-        <repository>
-            <id>wso2.releases</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-
-        <repository>
-            <id>wso2.snapshots</id>
-            <name>Apache Snapshot Repository</name>
-            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
-
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>wso2.releases</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </pluginRepository>
-
-        <pluginRepository>
-            <id>wso2.snapshots</id>
-            <name>WSO2 Snapshot Repository</name>
-            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </pluginRepository>
-        <pluginRepository>
-            <id>wso2-nexus</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </pluginRepository>
-    </pluginRepositories>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
+            <artifactId>axiom</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.core.services</artifactId>
+            <version>${org.wso2.carbon.core.services.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity</groupId>
+            <artifactId>org.wso2.carbon.identity.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec.wso2</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-scr-plugin</artifactId>
-                <version>${org.apache.felix.src.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>generate-scr-scrdescriptor</id>
@@ -118,7 +91,6 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
-                <version>${org.apache.felix.budnle.plugin.version}</version>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
@@ -127,10 +99,10 @@
                             org.wso2.carbon.is.migration.client.internal
                         </Private-Package>
                         <Import-Package>
-                            org.apache.commons.logging.*; version=${org.wso2.carbon.logging.import.version},
-                            org.wso2.carbon.identity.core.*; version=${org.wso2.carbon.identity.core.version},
-                            org.wso2.carbon.identity.application.common.*; version=${org.wso2.carbon.identity.application.common.version}
-                            *;resolution:=optional
+                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
+                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
+                            org.apache.commons.logging; version="${version.commons.logging}",
+                            org.wso2.carbon.identity.core.*; version="${carbon.identity.version}",
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
@@ -138,96 +110,5 @@
             </plugin>
         </plugins>
     </build>
-
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.ws.commons.axiom</groupId>
-            <artifactId>axiom-api</artifactId>
-            <version>${org.apache.ws.commons.axiom.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ws.commons.axiom</groupId>
-            <artifactId>axiom-impl</artifactId>
-            <version>${org.apache.ws.commons.axiom.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
-            <artifactId>axiom</artifactId>
-            <version>${org.apache.ws.commons.axiom.wso2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle.wso2</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>${org.bouncycastle.wso2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.core.services</artifactId>
-            <version>${org.wso2.carbon.core.services.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.logging</artifactId>
-            <version>${org.wso2.carbon.logging.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.utils</artifactId>
-            <version>${org.wso2.carbon.utils.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
-            <artifactId>org.wso2.carbon.identity.core</artifactId>
-            <version>${org.wso2.carbon.identity.core.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
-            <artifactId>org.wso2.carbon.identity.application.common</artifactId>
-            <version>${org.wso2.carbon.identity.application.common.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-scxml.wso2</groupId>
-            <artifactId>commons-scxml</artifactId>
-            <version>${commons-scxml.wso2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>${commons-codec.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>${commons-logging.version}</version>
-        </dependency>
-    </dependencies>
-
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.apache.felix.src.plugin.version>1.7.2</org.apache.felix.src.plugin.version>
-        <org.apache.felix.budnle.plugin.version>2.5.3</org.apache.felix.budnle.plugin.version>
-        <org.apache.ws.commons.axiom.version>1.2.14</org.apache.ws.commons.axiom.version>
-        <org.apache.ws.commons.axiom.wso2.version>1.2.11.wso2v5</org.apache.ws.commons.axiom.wso2.version>
-        <org.bouncycastle.wso2.version>1.49.0.wso2v2</org.bouncycastle.wso2.version>
-        <org.wso2.carbon.core.services.version>4.2.0</org.wso2.carbon.core.services.version>
-        <org.wso2.carbon.logging.version>4.2.0</org.wso2.carbon.logging.version>
-        <org.wso2.carbon.logging.import.version>1.0.4</org.wso2.carbon.logging.import.version>
-        <org.wso2.carbon.utils.version>4.2.0</org.wso2.carbon.utils.version>
-        <org.wso2.carbon.registry.api.version>4.2.0</org.wso2.carbon.registry.api.version>
-        <org.wso2.carbon.registry.core.version>4.2.0</org.wso2.carbon.registry.core.version>
-        <org.wso2.carbon.registry.core.import.version>1.0.1</org.wso2.carbon.registry.core.import.version>
-        <commons-digester.version>1.8</commons-digester.version>
-        <commons-codec.version>1.10</commons-codec.version>
-        <commons-logging.version>1.1.3</commons-logging.version>
-        <commons-scxml.wso2.version>0.9.0.wso2v1</commons-scxml.wso2.version>
-        <javax.xml.namespace.version>0.0.0</javax.xml.namespace.version>
-        <javax.servlet.version>2.4.0</javax.servlet.version>
-        <javax.servlet.http.version>2.4.0</javax.servlet.http.version>
-        <org.wso2.carbon.identity.core.version>4.5.5-SNAPSHOT</org.wso2.carbon.identity.core.version>
-        <org.wso2.carbon.identity.application.common.version>4.5.5-SNAPSHOT</org.wso2.carbon.identity.application.common.version>
-    </properties>
-
 
 </project>
