--- a/pom.xml
+++ b/pom.xml
@@ -1031,12 +1031,12 @@
         <emma.version>2.1.5320</emma.version>
         <jaggeryjs.version>0.11.0</jaggeryjs.version>
         <stratos.version>2.2.0</stratos.version>
-        <ws.module.version>1.1.0</ws.module.version>
-        <oauth.module.version>1.0.0</oauth.module.version>
-        <email.module.version>1.0.0</email.module.version>
-        <uuid.module.version>1.0.0</uuid.module.version>
+        <ws.module.version>${jaggery.extensions.version}</ws.module.version>
+        <oauth.module.version>${jaggery.extensions.version}</oauth.module.version>
+        <email.module.version>${jaggery.extensions.version}</email.module.version>
+        <uuid.module.version>${jaggery.extensions.version}</uuid.module.version>
         <securevault.wso2.version>1.0.0</securevault.wso2.version>
-        <process.module.version>1.0.0</process.module.version>
+        <process.module.version>${jaggery.extensions.version}</process.module.version>
         <caramel.module.version>1.0.1</caramel.module.version>
         <carbon.module.version>1.1.0</carbon.module.version>
         <handlebars.module.version>1.0.0</handlebars.module.version>
@@ -1050,8 +1050,8 @@
         <testng.version>6.1.1</testng.version>
         <carbon.deployment.version>4.4.1</carbon.deployment.version>
         <carbon.registry.version>4.4.8</carbon.registry.version>
-        <carbon.multitenancy.version>4.4.1</carbon.multitenancy.version>
-        <jaggery.extensions.version>1.3.0</jaggery.extensions.version>
+        <carbon.multitenancy.version>4.4.3</carbon.multitenancy.version>
+        <jaggery.extensions.version>1.4.0</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
         <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
         <axiom.wso2.version>1.2.11.wso2v6</axiom.wso2.version>
