--- a/pom.xml
+++ b/pom.xml
@@ -978,8 +978,8 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>4.5.10-SNAPSHOT</carbon.identity.version>
-        <carbon.identity.jar.version>4.5.10-SNAPSHOT</carbon.identity.jar.version>
+        <carbon.identity.version>4.6.0-SNAPSHOT</carbon.identity.version>
+        <carbon.identity.jar.version>4.6.0-SNAPSHOT</carbon.identity.jar.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
@@ -1029,7 +1029,7 @@
         <version.commons.logging>1.1.1</version.commons.logging>
         <commons.lang.version>2.6</commons.lang.version>
         <emma.version>2.1.5320</emma.version>
-        <jaggeryjs.version>0.11.0</jaggeryjs.version>
+        <jaggeryjs.version>0.12.0-M1</jaggeryjs.version>
         <stratos.version>2.2.0</stratos.version>
         <ws.module.version>${jaggery.extensions.version}</ws.module.version>
         <oauth.module.version>${jaggery.extensions.version}</oauth.module.version>
@@ -1050,8 +1050,8 @@
         <testng.version>6.1.1</testng.version>
         <carbon.deployment.version>4.4.1</carbon.deployment.version>
         <carbon.registry.version>4.4.8</carbon.registry.version>
-        <carbon.multitenancy.version>4.4.3</carbon.multitenancy.version>
-        <jaggery.extensions.version>1.4.0</jaggery.extensions.version>
+        <carbon.multitenancy.version>4.5.0-m1</carbon.multitenancy.version>
+        <jaggery.extensions.version>1.5.0-M1</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
         <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
         <axiom.wso2.version>1.2.11.wso2v6</axiom.wso2.version>
