--- a/modules/samples/user-mgt/sample-custome-user-store-manager/pom.xml
+++ b/modules/samples/user-mgt/sample-custome-user-store-manager/pom.xml
@@ -6,13 +6,12 @@
     <parent>
         <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-usermgt</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-alpha</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.sample.user.store.manager</artifactId>
-    <version>1.0</version>
     <packaging>bundle</packaging>
 
     <dependencies>
