--- a/modules/samples/xacml/kmarket-trading-sample/pom.xml
+++ b/modules/samples/xacml/kmarket-trading-sample/pom.xml
@@ -6,13 +6,12 @@
     <parent>
         <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-xacml</artifactId>
-        <version>5.1.0-SNAPSHOT</version>
+        <version>5.1.0-alpha</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.carbon.identity.samples.entitlement.kmarket.trading</artifactId>
-    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>WSO2 Entitlement Sample Online Trading</name>
 
