--- a/pom.xml
+++ b/pom.xml
@@ -978,8 +978,8 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>4.6.0-SNAPSHOT</carbon.identity.version>
-        <carbon.identity.jar.version>4.6.0-SNAPSHOT</carbon.identity.jar.version>
+        <carbon.identity.version>4.6.0-M2</carbon.identity.version>
+        <carbon.identity.jar.version>4.6.0-M2</carbon.identity.jar.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
