--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>identity-server-parent</artifactId>
     <packaging>pom</packaging>
     <description>WSO2 Identity Server</description>
-    <version>5.1.0-SNAPSHOT</version>
+    <version>${product.identity.version}</version>
     <name>WSO2 Identity Server</name>
     <url>http://wso2.org/projects/identity</url>
 
