correcting avis.properties

--- a/modules/samples/sso/SSOAgentSample/src/main/resources/avis.properties
+++ b/modules/samples/sso/SSOAgentSample/src/main/resources/avis.properties
@@ -14,102 +14,95 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-EnableSAMLSSOLogin=true
+
+EnableSAML2SSOLogin=true
 EnableOpenIDLogin=true
-EnableSAML2Grant=false
+EnableOAuth2SAML2Grant=false
 
-#This is the URL of the page that is used to choose the login scheme 
-#such as SAML SSO or OpenID. This Url will not be processed by the 
-#SSOAgentFilter
-LoginUrl=index.jsp
+#Url to do send SAML2 SSO AuthnRequest
+SAML2SSOURL=samlsso
 
-#Url to do send SAMLSSO AuthnRequest
-SAMLSSOUrl=samlsso
+#Url to do initiate OAuth2 SAML2 Grant Request
+OAuth2SAML2GrantURL=token
 
-#Url to do send SAML2 Grant OAuth2 Request
-SAML2GrantUrl=token
+#Url to initiate OpenID Authentication Request
+OpenIdURL=openid
 
-#Url to send OpenID Authentication Request
-OpenIDUrl=openid
+#URIs to skip SSOAgentFilter; comma separated values
+SkipURIs=/avis.com/index.jsp
 
 #A unique identifier for this SAML 2.0 Service Provider application
-SAML.IssuerID=avis.com
+SAML2.SPEntityId=avis.com
 
 #The URL of the SAML 2.0 Assertion Consumer
-SAML.ConsumerUrl=http://localhost:8080/avis.com/home.jsp
+SAML2.AssertionConsumerURL=http://localhost:8080/avis.com/home.jsp
+
+#A unique identifier for this SAML 2.0 Service Provider application
+SAML2.IdPEntityId=localhost
 
 #The URL of the SAML 2.0 Identity Provider
-SAML.IdPUrl=https://localhost:9443/samlsso
-
-#This is the attribute name under which the authenticated session information 
-#of SAML SSO and OpenID are stored
-SSOAgentSessionBeanName=SSOAgentSessionBean
+SAML2.IdPURL=https://localhost:9443/samlsso
 
 #Identifier given for the Service Provider for SAML 2.0 attributes 
 #exchange
-#SAML.AttributeConsumingServiceIndex=1701087467
+#SAML2.AttributeConsumingServiceIndex=1701087467
 
 #Specify if SingleLogout is enabled/disabled
-SAML.EnableSLO=true
+SAML2.EnableSLO=true
 
 #This is the URL that is used for SLO
-SAML.LogoutUrl=logout
+SAML2.SLOURL=logout
 
 #Specify if SAMLResponse element is signed
-SAML.EnableResponseSigning=true
+SAML2.EnableResponseSigning=true
 
 #Specify if SAMLAssertion element is signed
-SAML.EnableAssertionSigning=true
+SAML2.EnableAssertionSigning=true
 
 #Specify if SAMLAssertion element is encrypted
-SAML.EnableAssertionEncryption=false
+SAML2.EnableAssertionEncryption=false
 
 #Specify if AuthnRequests and LogoutRequests should be signed
-SAML.EnableRequestSigning=true
+SAML2.EnableRequestSigning=true
 
-#Specify if force authentication enabled
-SAML.EnableForceAuthentication=false
-
-#Custom credentials class
-SAML.SSOAgentCredentialImplClass=org.wso2.carbon.identity.sso.agent.saml.SSOAgentKeyStoreCredential
-
-#KeyStore to cryptographic credentials
-#SAML.KeyStore=/home/johann/Desktop/wso2is-4.1.0/repository/resources/security/wso2carbon.jks
-
-#Password of the KeyStore
-SAML.KeyStorePassword=wso2carbon
+#Password of the KeyStore for SAML and OpenID
+KeyStorePassword=wso2carbon
 
 #Alias of the IdP's public certificate
-SAML.IdPCertAlias=wso2carbon
+IdPPublicCertAlias=wso2carbon
 
 #Alias of the SP's private key 
-SAML.PrivateKeyAlias=wso2carbon
+PrivateKeyAlias=wso2carbon
 
 #Private key password to retrieve the private key used to sign 
 #AuthnRequest and LogoutRequest messages
-SAML.PrivateKeyPassword=wso2carbon
+PrivateKeyPassword=wso2carbon
 
 #OAuth2 token endpoint URL
-SAML.OAuth2TokenEndpoint=https://localhost:9443/oauth2/token
+OAuth2.TokenURL=https://localhost:9443/oauth2/token
 
 #OAuth2 Client ID
-SAML.OAuth2ClientID=Qn5DQHCYfshxeZh6R9SL1HM2lsMa
+OAuth2.ClientId=Qn5DQHCYfshxeZh6R9SL1HM2lsMa
 
 #OAuth2 Client Secret
-SAML.OAuth2ClientSecret=cbkAs1gajdwPAMbrSR54hPAIcz0a
+OAuth2.ClientSecret=cbkAs1gajdwPAMbrSR54hPAIcz0a
 
 #OpenId Provider Url
-OpenID.OpenIdProviderUrl=https://localhost:9443/openid/
+OpenId.ProviderURL=https://localhost:9443/openid/
 
 #openid.return_to parameter
-OpenID.ReturnToUrl=http://localhost:8080/avis.com/home.jsp
+OpenId.ReturnToURL=http://localhost:8080/avis.com/home.jsp
 
-#This is the request parameter name under which to find the 
-#openid.claimed_id value to send OpenID authentication request
-OpenID.ClaimedIDParameterName=claimed_id
-
-#Custom OpenID AttributesRequestor class
-OpenID.AttributesRequestorImplClass=org.wso2.sample.is.sso.agent.SampleAttributesRequestor
+#Custom SAML post binding request page
+#SAML.PostBinding.RequestPage=path/to/the/html
 
 #Additional request parameters
-#SAML.Request.Query.Param=&forceAuth=true
+#QueryParams=tenantDomain=-1234
+
+#SAML2.IsForceAuthn=true
+
+#Specify whether the consumer requests user attributes from the provider
+OpenId.EnableAttributeExchange=true
+
+#Specify whether the consumer runs in dumb mode
+OpenId.EnableDumbMode=false
