IDENTITY-3735 Change the dashboard login page

--- a/modules/jaggery-apps/user-dashboard/dashboard/jaggery.conf
+++ b/modules/jaggery-apps/user-dashboard/dashboard/jaggery.conf
@@ -1,5 +1,5 @@
 {
-    "welcomeFiles":["landing.jag"],
+    "welcomeFiles":["index.jag"],
     "themeStat" : ["theme1"],
     "urlMappings" : [
 						{
