Adding Fixes for product-is test-suite to resolve IDENTITY-3629
Conflicts:
	modules/integration/tests-common/admin-clients/pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -3247,6 +3247,12 @@
                 <version>${carbon.identity.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.wso2.carbon.deployment</groupId>
+                <artifactId>org.wso2.carbon.service.mgt.stub</artifactId>
+                <version>${carbon.deployment.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.wso2.carbon.automation</groupId>
                 <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
                 <version>${carbon.automation.version}</version>
