--- a/pom.xml
+++ b/pom.xml
@@ -1004,9 +1004,9 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>5.0.1-SNAPSHOT</carbon.identity.version>
-        <carbon.identity.jar.version>5.0.1-SNAPSHOT</carbon.identity.jar.version>
-        <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
+        <carbon.identity.version>5.0.1</carbon.identity.version>
+        <carbon.identity.jar.version>5.0.1</carbon.identity.jar.version>
+        <product.identity.version>5.1.0-alpha2</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
         <sevlet.api.version>2.5</sevlet.api.version>
